# xpd

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: options.cmake  sound.cmake
config/: script.sh
pd/: CMakeLists.txt
pd/cmp/: CMakeLists.txt  lib_cmp.cpp  lib_cmp.h
pd/cpd/: CMakeLists.txt  atom.cpp  atom.h  atomlist.cpp  atomlist.h  cpd.cpp  cpd.h  cpd_array.cpp  cpd_array.h  cpd_array_element.cpp  cpd_array_element.h  cpd_atom.cpp  cpd_atom.h  cpd_canvas.cpp  cpd_canvas.h  cpd_catcher.cpp  cpd_catcher.h  cpd_class.cpp  cpd_connection.cpp  cpd_connection.h  cpd_def.h  cpd_dsp.cpp  cpd_dsp.h  cpd_env.cpp  cpd_env.h  cpd_globals.cpp  cpd_globals.h  cpd_list.cpp  cpd_list.h  cpd_loader.cpp  cpd_loader.h  cpd_object.cpp  cpd_object.h  cpd_patch.cpp  cpd_patch.h  cpd_receiver.cpp  cpd_receiver.h  cpd_system_lists.cpp  cpd_system_lists.h  cpd_types.cpp  (+6 more)
pd/mocks/: ring_buffer.h  s_audio_dummy.cpp
src/: CMakeLists.txt  abstractserver.cpp  abstractserver.h  abstractserverprocess.cpp  abstractserverprocess.h  arguments.cpp  arguments.h  array.cpp  array.h  arraydata.h  audiodevice.h  audiodevicemanager.h  canvas.cpp  canvas.h  canvasobserver.h  classinfo.cpp  classinfo.h  connection.cpp  connection.h  consoleobserver.cpp  consoleobserver.h  device.h  libraryinfo.h  localpdprocess.cpp  localpdprocess.h  localserver.cpp  localserver.h  logger.cpp  logger.h  mididevice.h  mididevicemanager.h  object.cpp  object.h  objectlist.cpp  objectlist.h  objectobserver.cpp  objectobserver.h  objectproperties.h  observer.h  pdLib.hpp  (+26 more)
tests/: CMakeLists.txt  test_cpd.cpp  test_cpd_array.cpp  test_cpd_atom.cpp  test_cpd_atomlist.cpp  test_cpd_canvas.cpp  test_cpd_catcher.cpp  test_cpd_class.cpp  test_cpd_connections.cpp  test_cpd_dsp.cpp  test_cpd_env.cpp  test_cpd_list.cpp  test_cpd_loader.cpp  test_cpd_object.cpp  test_localserver.cpp  test_objectlist.cpp  test_pdobject.cpp  test_xpd_array.cpp  test_xpd_pd_canvas.cpp  test_xpd_pd_floatarray.cpp
